--- a/framework/css/main.css
+++ b/framework/css/main.css
@@ -1,70 +1,21 @@
-* {
-    border: 1px solid red !important;
+body {
+  font-family: 'Lato', sans-serif;
+  color: #676858;
+  font-weight: 300;
 }
 
-* {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    box-sizing: border-box;
+.text-muted {
+  color: #BCBBBB;
 }
 
-.grid {
-    margin: 0 auto;
-    max-width: 1200px;
-    width: 100%;
+.text-thin {
+  font-weight: 100;
 }
 
-.row {
-    width: 100%;
-    margin-bottom: 20px;
-    display: flex;
+.title-super {
+  font-size: 60px;
 }
 
-.col-1 {
-    width: 8.33%;
-}
-
-.col-2 {
-    width: 16.66%;
-}
-
-.col-3 {
-    width: 25%;
-}
-
-.col-4 {
-    width: 33.33%;
-}
-
-.col-5 {
-    width: 41.66%;
-}
-
-.col-6 {
-    width: 50%;
-}
-
-.col-7 {
-    width: 58.33%;
-}
-
-.col-8 {
-    width: 66.66%;
-}
-
-.col-9 {
-    width: 75%;
-}
-
-.col-10 {
-    width: 83.33%;
-}
-
-.col-11 {
-    width: 91.66%;
-}
-
-.col-12 {
-    width: 100%;
+.title-logo {
+  margin-top: 20px;
 }
