replaced link placeholders with working links

--- a/framework/css/main.css
+++ b/framework/css/main.css
@@ -20,5 +20,10 @@ body {
   margin-top: 20px;
 }
 
-.imgbox:hover { opacity: 0.3; 
+.imgbox:hover { opacity: 0.3;
   filter: alpha(opacity=30);
+}
+
+a {
+  padding-bottom: 20px;
+}
