added semantic tags and more descriptive alt attributes to img tags

--- a/framework/css/main.css
+++ b/framework/css/main.css
@@ -1,7 +1,7 @@
 /* Page Styles */
 
 body {
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   color: #676858;
   font-weight: 300;
 }
